public/css/style.css
* {
  outline: none !important;
  text-decoration: none !important;
  list-style-type: none;
}

::-webkit-scrollbar {
  display: none;
}

body {
  list-style-type: none;
  background: linear-gradient(120deg, #17bebb, #f0a6ca);
  height: 100vh;
  font-family: Helvetica, sans-serif;
}

.chat-container {
  background: rgba(255, 255, 255, 0.05) !important;
  width: 600px !important;
  height: 75% !important;
  position: relative !important;
  top: none;
  right: none;
  bottom: none;
  left: none;
  border-radius: 0.2em !important;
  -webkit-box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.15) !important;
          box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.15) !important;
  margin: auto;
}

.chat-sidebar {
  background: rgba(255, 255, 255, 0.1) !important;
  width: 100% !important;
  height: 100% !important;
  float: right !important;
  border-top-right-radius: 0.2em !important;
  border-bottom-right-radius: 0.2em !important;
  overflow-y: auto;
}

#room-name {
  font-weight: 300 !important;
  font-size: 0.9em !important;
  margin: 0 !important;
  width: default;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  right: none;
  bottom: none;
  left: none;
  background: rgba(255, 255, 255, 0.05) !important;
  color: white !important;
  padding: 1em !important;
  text-align: center !important;
}

.usr {
  font-weight: 300 !important;
  font-size: 0.7em !important;
  margin: -0.25em 2em !important;
  width: 200px !important;
  float: left !important;
  text-align: left !important;
  color: white !important;
}

.message {
  background: rgba(255, 255, 255, 0.2) !important;
  padding: 1em 0 !important;
  height: auto !important;
  width: 65% !important;
  border-radius: 5px !important;
  margin: 2em 1em !important;
  overflow-y: auto !important;
}

.chat-main {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 30% 70%;
      grid-template-columns: 30% 70%;
  -ms-grid-rows: none;
      grid-template-rows: none;
  height: 100%;
}

#users .userFromList {
  font-weight: 300 !important;
  font-size: 0.8em !important;
  margin: 5px !important;
  width: 200px !important;
  float: left !important;
  text-align: left !important;
  color: white !important;
  text-transform: capitalize;
}

#users {
  height: 100%;
  overflow-y: scroll;
}

.meta {
  font-weight: 300;
  font-size: 0.7em;
  margin: 0em 2em;
  width: 200px;
  float: left;
  text-align: left;
  color: white;
}

.text {
  font-weight: 300;
  font-size: 0.7em;
  margin: 1em 2em 0.5em;
  width: 200px;
  float: left;
  text-align: left;
  color: white;
}

#chat-form #msg {
  font-weight: 300;
  font-size: 12px !important;
  margin: 0;
  width: 64.7%;
  background-color: rgba(255, 255, 255, 0.03);
  border: none;
  position: absolute;
  top: none;
  right: none;
  bottom: 0;
  left: 10;
  float: left;
  padding: 1.2em;
  outline: none;
  color: white;
}

#chat-form #msg:focus {
  outline: 0;
}

#chat-form #msg::-webkit-input-placeholder {
  color: white;
  opacity: 1;
}

#chat-form #msg:-ms-input-placeholder {
  color: white;
  opacity: 1;
}

#chat-form #msg::-ms-input-placeholder {
  color: white;
  opacity: 1;
}

#chat-form #msg::placeholder {
  color: white;
  opacity: 1;
}

.messages-input-wrapper {
  overflow-y: scroll;
}

.chat-messages {
  overflow-y: scroll;
  height: 88%;
}

.button {
  background-color: rgba(206, 206, 206, 0.16);
  border: none;
  text-decoration: none !important;
  color: white;
  padding: 10px 30px;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  font-size: 14px;
  cursor: pointer;
}

.button:hover {
  background-color: rgba(206, 206, 206, 0.4);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  color: white !important;
}

.chat-header {
  margin: 20px 0px 50px 10px;
}

.btn-primary {
  background-color: transparent !important;
  border: none !important;
}

@media only screen and (max-width: 650px) {
  .chat-main {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: none;
        grid-template-columns: none;
    -ms-grid-rows: 30% 70%;
        grid-template-rows: 30% 70%;
    height: 100%;
  }
  .chat-container {
    max-width: 350px;
    margin: 10px auto;
  }
  .usr {
    padding: 2px !important;
  }
  #users {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}

/* HOME PAGE */
.form-wrapper, .form-control {
  display: -webkit-box !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-orient: vertical !important;
  -webkit-box-direction: normal !important;
      -ms-flex-direction: column !important;
          flex-direction: column !important;
}

.join-main {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  margin: 10px auto;
  padding: 20px;
  -webkit-box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.15);
          box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.15);
  max-width: 400px;
  justify-items: center;
}

.join-container {
  margin: 40px 0px;
}

#room {
  width: 73% !important;
}

option {
  color: black;
}

.home-input, #room {
  background: rgba(255, 255, 255, 0.071);
  width: 70%;
  height: 3em;
  margin: 15px auto;
  border-radius: 2px;
  border: none !important;
  color: rgba(255, 255, 255, 0.7);
  padding-left: 10px;
}

.home-input::-webkit-input-placeholder {
  color: rgba(255, 255, 255, 0.7);
}

.home-input:-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.7);
}

.home-input::-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.7);
}

.home-input::placeholder {
  color: rgba(255, 255, 255, 0.7);
}

.home-button {
  color: white;
  font-weight: default;
  font-size: 14px;
  margin: 15px auto;
  width: 72%;
  padding: 10px 35px;
  background-color: rgba(206, 206, 206, 0.16);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  border: none;
  cursor: pointer;
}

.home-button:hover {
  background-color: rgba(206, 206, 206, 0.4);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  color: white !important;
}

.home-title {
  font-weight: 100;
  font-size: default;
  margin: 20px auto;
  width: default;
  color: rgba(255, 255, 255, 0.379);
  letter-spacing: 0.2em;
}
/*# sourceMappingURL=style.css.map */

